# joint-improvement

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
configs/datasets/zinc250k/docking/5ht1b/seed_0/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/5ht1b/seed_1/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/5ht1b/seed_2/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/5ht1b/seed_3/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/5ht1b/seed_4/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/5ht1b/seed_5/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/5ht1b/seed_6/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/5ht1b/seed_7/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/5ht1b/seed_8/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/5ht1b/seed_9/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/braf/seed_0/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/braf/seed_1/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/braf/seed_2/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/braf/seed_3/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/braf/seed_4/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/braf/seed_5/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/docking/braf/seed_6/: test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/: dataset_config.json
configs/datasets/zinc250k/logp/seed_0/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/seed_1/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/seed_2/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/seed_3/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/seed_4/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/seed_5/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/seed_6/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/seed_7/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/seed_8/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/logp/seed_9/: dataset_config.json  test_dataset_config.json  train_dataset_config.json
configs/datasets/zinc250k/unsupervised/: dataset_config.json  train_dataset_config.json  val_dataset_config.json
configs/hyformer/: base.json  docking.json
configs/tokenizers/smiles/zinc250k/: tokenizer_config.json
configs/trainers/: finetune.json  pretrain.json  smoke_test.json
experiments/: __init__.py  helpers.py
experiments/data/: docking.py
experiments/offline_optimization/: __init__.py  helpers.py  metrics.py  oracle.py  run.py  sample.py
experiments/offline_optimization/conditional_sampling/: __init__.py  pipeline.py
experiments/offline_optimization/self_improvement/: __init__.py  pipeline.py
experiments/online_optimization/: helpers.py  run.py  sample.py
experiments/train/: run.py
scratch/: train.sh
scripts/: clean_vocab.py  run_gumbeldore.ipynb  run_pytest.sh  setup_env.sh  setup_env_mamba.sh  setup_env_micromamba.sh
src/joint_improvement/: __init__.py
src/joint_improvement/backbones/: inputs.py
src/joint_improvement/generators/: __init__.py  base.py  generator.py  gumbeldore.py  tasar.py  unconditional.py
src/joint_improvement/generators/utils/: incremental_sbs.py  stochastic_beam_search.py
src/joint_improvement/generators/utils/gumbeldore/: incremental_sbs.py  stochastic_beam_search.py
src/joint_improvement/generators/utils/tasar/: incremental_sbs.py  stochastic_beam_search.py
src/joint_improvement/hyformer/: README.md  __init__.py  checkpoint.py  config.py  helpers.py  inputs.py  losses.py  model.py  outputs.py  pretrained.py
src/joint_improvement/hyformer/layers/: attention.py  ffn.py  helpers.py  kv_cache.py  mlp.py  prediction.py  prediction_head.py  rms_norm.py  rotary.py  transformer_layer.py
src/joint_improvement/tokenizers/: __init__.py  smiles.py
src/joint_improvement/trainers/: __init__.py  checkpoint.py  device_optimizations.py  multitask.py  task_sampler.py
src/joint_improvement/utils/: __init__.py  config.py  experiments.py  memory.py  reproducibility.py
src/joint_improvement/utils/chemistry/: __init__.py  docking.py  docking_gpu.py  logp.py  qed.py  randomize.py  remove_radicals.py  sa.py  validity.py
src/joint_improvement/utils/chemistry/docking_utils/: dataclass.py  oracle_component.py  quickvina2.py  quickvina2_gpu.py
src/joint_improvement/utils/chemistry/synthesizability_utils/: sascorer.py
src/joint_improvement/utils/data/: README.md  __init__.py  collator.py  data_io.py  dataloader.py  dataset.py  target_transforms.py  transforms.py
src/joint_improvement/utils/data/collators/: __init__.py  base.py  lm_collator.py  mlm_collator.py  prediction_collator.py
src/joint_improvement/utils/metrics/: __init__.py  hit_ratio.py  hv.py  hypervolume.py  intdiv.py  r2.py
src/joint_improvement/utils/metrics/docking/: hit_ratio.py  hypervolume.py
tests/: test_data.py  test_tokenizer.py
tests/dataloaders/: test_invalid_smiles.py  test_lm_loader.py  test_mlm_loader.py  test_prediction_loader.py
(+69 files in other folders)
