[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joint-improvement"
version = "0.0.1"
description = "Official repository for Joint Improvement."
authors = [{name = "Serra Korkmaz, Adam Izdebski", email = "adam.izdebski1@gmail.com"}]
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.12"
dependencies = [
  "torch>=2.9.0",
  "transformers>=4.49.0",
  "datasets>=2.18.0",
  "accelerate>=0.28",
  "omegaconf>=2.3.0",
  "tqdm",
  "numpy",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "nbstripout",
    "pre-commit>=3.0.0",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff"
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
exclude = [
    "**/incremental_sbs.py",
    "**/stochastic_beam_search.py",
]

[tool.ruff.lint]
select = [
    "F",      # Errors detected by Pyflakes
    "E",      # Errors detected by Pycodestyle
    "W",      # Warnings detected by Pycodestyle
    "I",      # isort (import sorting)
    "D",      # pydocstyle (docstring conventions)
    "B",      # flake8-bugbear (common bugs and design issues)
    "TID",    # flake8-tidy-imports (import restrictions)
    "C4",     # flake8-comprehensions (list/set/dict comprehension improvements)
    "BLE",    # flake8-blind-except (discourage bare except)
    "UP",     # pyupgrade (syntax upgrades for newer Python versions)
    "TCH",    # typing imports (prefer standard library typing)
    "RUF100", # Report unused noqa directives
]
exclude = [
    "**/incremental_sbs.py",
    "**/stochastic_beam_search.py",
]

ignore = [
    # Pycodestyle
    "E501", # Line too long (we accept long comments; formatter handles code)
    "E731", # Do not assign a lambda expression (we allow this for convenience)
    "E741", # Ambiguous variable name "l", "O", or "I" (we allow "I" for identity matrices)

    # Flake8-bugbear
    "B008", # Do not perform function calls in default arguments (allowed when result is immutable)

    # Pydocstyle — disable “missing docstring” checks (docstrings optional)
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__

    # Pydocstyle — stylistic rules we don't want
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
    "D203", # 1 blank line required before class docstring
    "D212", # Enforces first-line docstring — disabled, since we prefer second-line
    # "D213",  # Multi-line docstring should start on the second line
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    ".*/incremental_sbs\\.py",
    ".*/stochastic_beam_search\\.py",
]

[[tool.mypy.overrides]]
module = [
    "joint_improvement.generators.incremental_sbs",
    "joint_improvement.generators.stochastic_beam_search",
]
ignore_errors = true


[tool.hatch.build.targets.sdist]
exclude = ["docs", "docs/**"]

[tool.hatch.build.targets.wheel]
exclude = ["docs", "docs/**"]

[tool.coverage.run]
branch = true
omit = ["*/.conda/*", "*/tests/*", "*/.Y/*"]
